src/grammar/DefEvaluator/DefEvaluatorParser.cpp

// Generated from DefEvaluator.g4 by ANTLR 4.13.2


#include "DefEvaluatorVisitor.h"

#include "DefEvaluatorParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct DefEvaluatorParserStaticData final {
  DefEvaluatorParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  DefEvaluatorParserStaticData(const DefEvaluatorParserStaticData&) = delete;
  DefEvaluatorParserStaticData(DefEvaluatorParserStaticData&&) = delete;
  DefEvaluatorParserStaticData& operator=(const DefEvaluatorParserStaticData&) = delete;
  DefEvaluatorParserStaticData& operator=(DefEvaluatorParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag defevaluatorParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<DefEvaluatorParserStaticData> defevaluatorParserStaticData = nullptr;

void defevaluatorParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (defevaluatorParserStaticData != nullptr) {
    return;
  }
#else
  assert(defevaluatorParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<DefEvaluatorParserStaticData>(
    std::vector<std::string>{
      "primaryExpression", "unaryExpression", "unaryOperator", "castExpression", 
      "relationalExpression", "equalityExpression", "multiplicativeExpression", 
      "additiveExpression", "shiftExpression", "andExpression", "exclusiveOrExpression", 
      "inclusiveOrExpression", "logicalAndExpression", "logicalOrExpression", 
      "conditionalExpression", "assignmentExpression", "entryExpression"
    },
    std::vector<std::string>{
      "", "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", "'\\u003F'", 
      "':'", "'('", "')'", "'<<'", "'>>'", "'+'", "'-'", "'*'", "'/'", "'%'", 
      "'&'", "'|'", "'^'", "'!'", "'~'", "'<'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "LeftParen", "RightParen", 
      "LeftShift", "RightShift", "Plus", "Minus", "Star", "Div", "Mod", 
      "And", "Or", "Caret", "Not", "Tilde", "LessThan", "Constant", "IntegerConstant", 
      "Whitespace"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  defevaluatorParserStaticData = std::move(staticData);
}

}

DefEvaluatorParser::DefEvaluatorParser(TokenStream *input) : DefEvaluatorParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

DefEvaluatorParser::DefEvaluatorParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  DefEvaluatorParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *defevaluatorParserStaticData->atn, defevaluatorParserStaticData->decisionToDFA, defevaluatorParserStaticData->sharedContextCache, options);
}

DefEvaluatorParser::~DefEvaluatorParser() {
  delete _interpreter;
}

const atn::ATN& DefEvaluatorParser::getATN() const {
  return *defevaluatorParserStaticData->atn;
}

std::string DefEvaluatorParser::getGrammarFileName() const {
  return "DefEvaluator.g4";
}

const std::vector<std::string>& DefEvaluatorParser::getRuleNames() const {
  return defevaluatorParserStaticData->ruleNames;
}

const dfa::Vocabulary& DefEvaluatorParser::getVocabulary() const {
  return defevaluatorParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView DefEvaluatorParser::getSerializedATN() const {
  return defevaluatorParserStaticData->serializedATN;
}


//----------------- PrimaryExpressionContext ------------------------------------------------------------------

DefEvaluatorParser::PrimaryExpressionContext::PrimaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DefEvaluatorParser::PrimaryExpressionContext::Constant() {
  return getToken(DefEvaluatorParser::Constant, 0);
}

tree::TerminalNode* DefEvaluatorParser::PrimaryExpressionContext::LeftParen() {
  return getToken(DefEvaluatorParser::LeftParen, 0);
}

DefEvaluatorParser::AssignmentExpressionContext* DefEvaluatorParser::PrimaryExpressionContext::assignmentExpression() {
  return getRuleContext<DefEvaluatorParser::AssignmentExpressionContext>(0);
}

tree::TerminalNode* DefEvaluatorParser::PrimaryExpressionContext::RightParen() {
  return getToken(DefEvaluatorParser::RightParen, 0);
}


size_t DefEvaluatorParser::PrimaryExpressionContext::getRuleIndex() const {
  return DefEvaluatorParser::RulePrimaryExpression;
}


std::any DefEvaluatorParser::PrimaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DefEvaluatorVisitor*>(visitor))
    return parserVisitor->visitPrimaryExpression(this);
  else
    return visitor->visitChildren(this);
}

DefEvaluatorParser::PrimaryExpressionContext* DefEvaluatorParser::primaryExpression() {
  PrimaryExpressionContext *_localctx = _tracker.createInstance<PrimaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 0, DefEvaluatorParser::RulePrimaryExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(39);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DefEvaluatorParser::Constant: {
        enterOuterAlt(_localctx, 1);
        setState(34);
        match(DefEvaluatorParser::Constant);
        break;
      }

      case DefEvaluatorParser::LeftParen: {
        enterOuterAlt(_localctx, 2);
        setState(35);
        match(DefEvaluatorParser::LeftParen);
        setState(36);
        assignmentExpression();
        setState(37);
        match(DefEvaluatorParser::RightParen);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryExpressionContext ------------------------------------------------------------------

DefEvaluatorParser::UnaryExpressionContext::UnaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DefEvaluatorParser::PrimaryExpressionContext* DefEvaluatorParser::UnaryExpressionContext::primaryExpression() {
  return getRuleContext<DefEvaluatorParser::PrimaryExpressionContext>(0);
}

DefEvaluatorParser::UnaryOperatorContext* DefEvaluatorParser::UnaryExpressionContext::unaryOperator() {
  return getRuleContext<DefEvaluatorParser::UnaryOperatorContext>(0);
}

DefEvaluatorParser::CastExpressionContext* DefEvaluatorParser::UnaryExpressionContext::castExpression() {
  return getRuleContext<DefEvaluatorParser::CastExpressionContext>(0);
}


size_t DefEvaluatorParser::UnaryExpressionContext::getRuleIndex() const {
  return DefEvaluatorParser::RuleUnaryExpression;
}


std::any DefEvaluatorParser::UnaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DefEvaluatorVisitor*>(visitor))
    return parserVisitor->visitUnaryExpression(this);
  else
    return visitor->visitChildren(this);
}

DefEvaluatorParser::UnaryExpressionContext* DefEvaluatorParser::unaryExpression() {
  UnaryExpressionContext *_localctx = _tracker.createInstance<UnaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 2, DefEvaluatorParser::RuleUnaryExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(45);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DefEvaluatorParser::LeftParen:
      case DefEvaluatorParser::Constant: {
        enterOuterAlt(_localctx, 1);
        setState(41);
        primaryExpression();
        break;
      }

      case DefEvaluatorParser::Plus:
      case DefEvaluatorParser::Minus:
      case DefEvaluatorParser::Not:
      case DefEvaluatorParser::Tilde: {
        enterOuterAlt(_localctx, 2);
        setState(42);
        unaryOperator();
        setState(43);
        castExpression();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryOperatorContext ------------------------------------------------------------------

DefEvaluatorParser::UnaryOperatorContext::UnaryOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DefEvaluatorParser::UnaryOperatorContext::Plus() {
  return getToken(DefEvaluatorParser::Plus, 0);
}

tree::TerminalNode* DefEvaluatorParser::UnaryOperatorContext::Minus() {
  return getToken(DefEvaluatorParser::Minus, 0);
}

tree::TerminalNode* DefEvaluatorParser::UnaryOperatorContext::Tilde() {
  return getToken(DefEvaluatorParser::Tilde, 0);
}

tree::TerminalNode* DefEvaluatorParser::UnaryOperatorContext::Not() {
  return getToken(DefEvaluatorParser::Not, 0);
}


size_t DefEvaluatorParser::UnaryOperatorContext::getRuleIndex() const {
  return DefEvaluatorParser::RuleUnaryOperator;
}


std::any DefEvaluatorParser::UnaryOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DefEvaluatorVisitor*>(visitor))
    return parserVisitor->visitUnaryOperator(this);
  else
    return visitor->visitChildren(this);
}

DefEvaluatorParser::UnaryOperatorContext* DefEvaluatorParser::unaryOperator() {
  UnaryOperatorContext *_localctx = _tracker.createInstance<UnaryOperatorContext>(_ctx, getState());
  enterRule(_localctx, 4, DefEvaluatorParser::RuleUnaryOperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 12632064) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CastExpressionContext ------------------------------------------------------------------

DefEvaluatorParser::CastExpressionContext::CastExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DefEvaluatorParser::UnaryExpressionContext* DefEvaluatorParser::CastExpressionContext::unaryExpression() {
  return getRuleContext<DefEvaluatorParser::UnaryExpressionContext>(0);
}

tree::TerminalNode* DefEvaluatorParser::CastExpressionContext::Constant() {
  return getToken(DefEvaluatorParser::Constant, 0);
}


size_t DefEvaluatorParser::CastExpressionContext::getRuleIndex() const {
  return DefEvaluatorParser::RuleCastExpression;
}


std::any DefEvaluatorParser::CastExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DefEvaluatorVisitor*>(visitor))
    return parserVisitor->visitCastExpression(this);
  else
    return visitor->visitChildren(this);
}

DefEvaluatorParser::CastExpressionContext* DefEvaluatorParser::castExpression() {
  CastExpressionContext *_localctx = _tracker.createInstance<CastExpressionContext>(_ctx, getState());
  enterRule(_localctx, 6, DefEvaluatorParser::RuleCastExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(51);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(49);
      unaryExpression();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(50);
      match(DefEvaluatorParser::Constant);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RelationalExpressionContext ------------------------------------------------------------------

DefEvaluatorParser::RelationalExpressionContext::RelationalExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DefEvaluatorParser::ShiftExpressionContext *> DefEvaluatorParser::RelationalExpressionContext::shiftExpression() {
  return getRuleContexts<DefEvaluatorParser::ShiftExpressionContext>();
}

DefEvaluatorParser::ShiftExpressionContext* DefEvaluatorParser::RelationalExpressionContext::shiftExpression(size_t i) {
  return getRuleContext<DefEvaluatorParser::ShiftExpressionContext>(i);
}

std::vector<tree::TerminalNode *> DefEvaluatorParser::RelationalExpressionContext::LessThan() {
  return getTokens(DefEvaluatorParser::LessThan);
}

tree::TerminalNode* DefEvaluatorParser::RelationalExpressionContext::LessThan(size_t i) {
  return getToken(DefEvaluatorParser::LessThan, i);
}


size_t DefEvaluatorParser::RelationalExpressionContext::getRuleIndex() const {
  return DefEvaluatorParser::RuleRelationalExpression;
}


std::any DefEvaluatorParser::RelationalExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DefEvaluatorVisitor*>(visitor))
    return parserVisitor->visitRelationalExpression(this);
  else
    return visitor->visitChildren(this);
}

DefEvaluatorParser::RelationalExpressionContext* DefEvaluatorParser::relationalExpression() {
  RelationalExpressionContext *_localctx = _tracker.createInstance<RelationalExpressionContext>(_ctx, getState());
  enterRule(_localctx, 8, DefEvaluatorParser::RuleRelationalExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    shiftExpression();
    setState(58);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 16777230) != 0)) {
      setState(54);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 16777230) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(55);
      shiftExpression();
      setState(60);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EqualityExpressionContext ------------------------------------------------------------------

DefEvaluatorParser::EqualityExpressionContext::EqualityExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DefEvaluatorParser::RelationalExpressionContext *> DefEvaluatorParser::EqualityExpressionContext::relationalExpression() {
  return getRuleContexts<DefEvaluatorParser::RelationalExpressionContext>();
}

DefEvaluatorParser::RelationalExpressionContext* DefEvaluatorParser::EqualityExpressionContext::relationalExpression(size_t i) {
  return getRuleContext<DefEvaluatorParser::RelationalExpressionContext>(i);
}


size_t DefEvaluatorParser::EqualityExpressionContext::getRuleIndex() const {
  return DefEvaluatorParser::RuleEqualityExpression;
}


std::any DefEvaluatorParser::EqualityExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DefEvaluatorVisitor*>(visitor))
    return parserVisitor->visitEqualityExpression(this);
  else
    return visitor->visitChildren(this);
}

DefEvaluatorParser::EqualityExpressionContext* DefEvaluatorParser::equalityExpression() {
  EqualityExpressionContext *_localctx = _tracker.createInstance<EqualityExpressionContext>(_ctx, getState());
  enterRule(_localctx, 10, DefEvaluatorParser::RuleEqualityExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    relationalExpression();
    setState(66);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DefEvaluatorParser::T__3

    || _la == DefEvaluatorParser::T__4) {
      setState(62);
      _la = _input->LA(1);
      if (!(_la == DefEvaluatorParser::T__3

      || _la == DefEvaluatorParser::T__4)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(63);
      relationalExpression();
      setState(68);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MultiplicativeExpressionContext ------------------------------------------------------------------

DefEvaluatorParser::MultiplicativeExpressionContext::MultiplicativeExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DefEvaluatorParser::CastExpressionContext *> DefEvaluatorParser::MultiplicativeExpressionContext::castExpression() {
  return getRuleContexts<DefEvaluatorParser::CastExpressionContext>();
}

DefEvaluatorParser::CastExpressionContext* DefEvaluatorParser::MultiplicativeExpressionContext::castExpression(size_t i) {
  return getRuleContext<DefEvaluatorParser::CastExpressionContext>(i);
}

std::vector<tree::TerminalNode *> DefEvaluatorParser::MultiplicativeExpressionContext::Star() {
  return getTokens(DefEvaluatorParser::Star);
}

tree::TerminalNode* DefEvaluatorParser::MultiplicativeExpressionContext::Star(size_t i) {
  return getToken(DefEvaluatorParser::Star, i);
}

std::vector<tree::TerminalNode *> DefEvaluatorParser::MultiplicativeExpressionContext::Div() {
  return getTokens(DefEvaluatorParser::Div);
}

tree::TerminalNode* DefEvaluatorParser::MultiplicativeExpressionContext::Div(size_t i) {
  return getToken(DefEvaluatorParser::Div, i);
}

std::vector<tree::TerminalNode *> DefEvaluatorParser::MultiplicativeExpressionContext::Mod() {
  return getTokens(DefEvaluatorParser::Mod);
}

tree::TerminalNode* DefEvaluatorParser::MultiplicativeExpressionContext::Mod(size_t i) {
  return getToken(DefEvaluatorParser::Mod, i);
}


size_t DefEvaluatorParser::MultiplicativeExpressionContext::getRuleIndex() const {
  return DefEvaluatorParser::RuleMultiplicativeExpression;
}


std::any DefEvaluatorParser::MultiplicativeExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DefEvaluatorVisitor*>(visitor))
    return parserVisitor->visitMultiplicativeExpression(this);
  else
    return visitor->visitChildren(this);
}

DefEvaluatorParser::MultiplicativeExpressionContext* DefEvaluatorParser::multiplicativeExpression() {
  MultiplicativeExpressionContext *_localctx = _tracker.createInstance<MultiplicativeExpressionContext>(_ctx, getState());
  enterRule(_localctx, 12, DefEvaluatorParser::RuleMultiplicativeExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    castExpression();
    setState(74);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 458752) != 0)) {
      setState(70);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 458752) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(71);
      castExpression();
      setState(76);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AdditiveExpressionContext ------------------------------------------------------------------

DefEvaluatorParser::AdditiveExpressionContext::AdditiveExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DefEvaluatorParser::MultiplicativeExpressionContext *> DefEvaluatorParser::AdditiveExpressionContext::multiplicativeExpression() {
  return getRuleContexts<DefEvaluatorParser::MultiplicativeExpressionContext>();
}

DefEvaluatorParser::MultiplicativeExpressionContext* DefEvaluatorParser::AdditiveExpressionContext::multiplicativeExpression(size_t i) {
  return getRuleContext<DefEvaluatorParser::MultiplicativeExpressionContext>(i);
}

std::vector<tree::TerminalNode *> DefEvaluatorParser::AdditiveExpressionContext::Plus() {
  return getTokens(DefEvaluatorParser::Plus);
}

tree::TerminalNode* DefEvaluatorParser::AdditiveExpressionContext::Plus(size_t i) {
  return getToken(DefEvaluatorParser::Plus, i);
}

std::vector<tree::TerminalNode *> DefEvaluatorParser::AdditiveExpressionContext::Minus() {
  return getTokens(DefEvaluatorParser::Minus);
}

tree::TerminalNode* DefEvaluatorParser::AdditiveExpressionContext::Minus(size_t i) {
  return getToken(DefEvaluatorParser::Minus, i);
}


size_t DefEvaluatorParser::AdditiveExpressionContext::getRuleIndex() const {
  return DefEvaluatorParser::RuleAdditiveExpression;
}


std::any DefEvaluatorParser::AdditiveExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DefEvaluatorVisitor*>(visitor))
    return parserVisitor->visitAdditiveExpression(this);
  else
    return visitor->visitChildren(this);
}

DefEvaluatorParser::AdditiveExpressionContext* DefEvaluatorParser::additiveExpression() {
  AdditiveExpressionContext *_localctx = _tracker.createInstance<AdditiveExpressionContext>(_ctx, getState());
  enterRule(_localctx, 14, DefEvaluatorParser::RuleAdditiveExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    multiplicativeExpression();
    setState(82);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DefEvaluatorParser::Plus

    || _la == DefEvaluatorParser::Minus) {
      setState(78);
      _la = _input->LA(1);
      if (!(_la == DefEvaluatorParser::Plus

      || _la == DefEvaluatorParser::Minus)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(79);
      multiplicativeExpression();
      setState(84);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShiftExpressionContext ------------------------------------------------------------------

DefEvaluatorParser::ShiftExpressionContext::ShiftExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DefEvaluatorParser::AdditiveExpressionContext *> DefEvaluatorParser::ShiftExpressionContext::additiveExpression() {
  return getRuleContexts<DefEvaluatorParser::AdditiveExpressionContext>();
}

DefEvaluatorParser::AdditiveExpressionContext* DefEvaluatorParser::ShiftExpressionContext::additiveExpression(size_t i) {
  return getRuleContext<DefEvaluatorParser::AdditiveExpressionContext>(i);
}

std::vector<tree::TerminalNode *> DefEvaluatorParser::ShiftExpressionContext::LeftShift() {
  return getTokens(DefEvaluatorParser::LeftShift);
}

tree::TerminalNode* DefEvaluatorParser::ShiftExpressionContext::LeftShift(size_t i) {
  return getToken(DefEvaluatorParser::LeftShift, i);
}

std::vector<tree::TerminalNode *> DefEvaluatorParser::ShiftExpressionContext::RightShift() {
  return getTokens(DefEvaluatorParser::RightShift);
}

tree::TerminalNode* DefEvaluatorParser::ShiftExpressionContext::RightShift(size_t i) {
  return getToken(DefEvaluatorParser::RightShift, i);
}


size_t DefEvaluatorParser::ShiftExpressionContext::getRuleIndex() const {
  return DefEvaluatorParser::RuleShiftExpression;
}


std::any DefEvaluatorParser::ShiftExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DefEvaluatorVisitor*>(visitor))
    return parserVisitor->visitShiftExpression(this);
  else
    return visitor->visitChildren(this);
}

DefEvaluatorParser::ShiftExpressionContext* DefEvaluatorParser::shiftExpression() {
  ShiftExpressionContext *_localctx = _tracker.createInstance<ShiftExpressionContext>(_ctx, getState());
  enterRule(_localctx, 16, DefEvaluatorParser::RuleShiftExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    additiveExpression();
    setState(90);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DefEvaluatorParser::LeftShift

    || _la == DefEvaluatorParser::RightShift) {
      setState(86);
      _la = _input->LA(1);
      if (!(_la == DefEvaluatorParser::LeftShift

      || _la == DefEvaluatorParser::RightShift)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(87);
      additiveExpression();
      setState(92);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AndExpressionContext ------------------------------------------------------------------
